--- a/index.htm
+++ b/index.htm
@@ -13,6 +13,13 @@
                 <h2>Top 10 Favorite Songs</h2>
             </header>
 
+            <nav>
+                <ul>
+                    <li><a href="index.html">Top 10 Songs</a></li>
+                    <li><a href="music.html">Music List</a></li>
+                </ul>
+            </nav>
+
             <section class="quotes">
                 <h2>Best Lyrics</h2>
                 <ul>
@@ -201,7 +208,10 @@
                     lowest of hearts to set their eyes on Jesus because He concord all.</p>
             </section>
             
-            <footer class="footer">Designer: Rachel Wood | 777-777-7777 | puredesigns.com</footer>
+            <footer class="footer">
+                <!-- <p div="designer">Powered by Rachel Wood |</p> -->
+                <p>Powered by <a div="puredesigns" href="https://puredesigns.link" target="_blank">PureDesigns.link</a></p>
+            </footer>
 
         </main>
     </body>
