TouchUps index.html

--- a/index.htm
+++ b/index.htm
@@ -13,8 +13,8 @@
                 <h2>Top 10 Favorite Songs</h2>
             </header>
 
-            <nav>
-                <ul>
+            <nav id="navigation">
+                <ul id="navLinks">
                     <li><a href="index.html">Top 10 Songs</a></li>
                     <li><a href="music.html">Music List</a></li>
                 </ul>
@@ -209,7 +209,6 @@
             </section>
             
             <footer class="footer">
-                <!-- <p div="designer">Powered by Rachel Wood |</p> -->
                 <p>Powered by <a div="puredesigns" href="https://puredesigns.link" target="_blank">PureDesigns.link</a></p>
             </footer>
 
